Se termino parte de login.